# tetromino-astar

./: BitGrid16x16.cpp  BitGrid16x16.h  BitGrid8x8.cpp  BitGrid8x8.h  CMakeLists.txt  Grid.cpp  Grid.h  Node.cpp  Node.h  Position.h  README.md  astar.cpp  astar.h  main.cpp
include/: BitGrid.h  BitGrid16x16.h  BitGrid8x8.h  Grid.h  Node.h  Position.h  astar.h
src/: BitGrid16x16.cpp  BitGrid8x8.cpp  Grid.cpp  Node.cpp  astar.cpp  main.cpp
tests/: 1.txt
